# pytorch_influence_functions

./: .gitignore  README.md  pyproject.toml  requirements.txt  ruff_defaults.toml  setup.py
.github/workflows/: README.md  run-tests.yaml
pytorch_influence_functions/: calc_influence_function.py  influence_function.py  utils.py
tests/: README.md  test_calc_influence_function.py  test_influence_function.py  test_utils.py
