[project]
name = "pytorch_influence_functions"
description = "Pytorch implementation of influence functions. Influence Functions were introduced in the paper Understanding Black-box Predictions via Influence Functions by Pang Wei Koh and Percy Liang (ICML2017)"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.3"
requires-python = ">= 3.10"
dependencies = [
    "ruff>=0.3.7",
    "mypy>=1.9.0",
    "mypy-extensions>=1.0.0",
    "numpy>=1.26.4",
    "torch>=2.2.2",
    "typing_extensions>=4.11.0",
]
authors = [
    {name = "Nimar Blume", email = "l.nimar.b@gmail.com"},
    {name = "Shen Zhou Hong", email = "ShenZhouHong@users.noreply.github.com"}
]
keywords = ["pytorch", "influence", "machine learning", "AI", "interpretability"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: OS Independent"
]

[project.urls]
Homepage = "https://github.com/PRAISE-Lab-Repository/pytorch_influence_functions"
Documentation = "https://github.com/PRAISE-Lab-Repository/pytorch_influence_functions"
Repository = "https://github.com/PRAISE-Lab-Repository/pytorch_influence_functions.git"
Issues = "https://github.com/PRAISE-Lab-Repository/pytorch_influence_functions/issues"
Changelog = "https://github.com/PRAISE-Lab-Repository/pytorch_influence_functions"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.envs.default.scripts]
unit-tests = "python -m unittest -v"
type-check = "mypy pytorch_influence_functions"
ruff-check = "ruff check"

[tool.hatch.envs.hatch-static-analysis]
config-path = "ruff_defaults.toml"

[tool.mypy]
allow_redefinition = true

[tool.ruff]
extend = "ruff_defaults.toml"